Added basic starting HTML file.

--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,19 @@
     <title></title>
 </head>
 <body>
-    <div>
-        <h1>Kevin Lim</h1>
+    <div id="header">
+        <h1 id="name">Kevin Lim</h1>
     </div>
-
+    <div id="project_list">
+        <div class="project">
+            <h2>Project 1</h2>
+        </div>
+        <div class="project">
+            <h2>Project 2</h2>
+        </div>
+        <div class="project">
+            <h2>Project 3</h2>
+        </div>
+    </div>
 </body>
 </html>
