--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="header">
-        <h1 id="name">Kevin Lim</h1>
+        <h1 id="name">Scott Klemmer</h1>
     </div>
     <div id="project_list">
         <div class="project">
